annotator script